@@ -19,11 +19,12 @@ package org.springframework.kafka.support;
 import static org.assertj.core.api.Assertions.assertThat;
 import static org.assertj.core.api.Assertions.entry;
 
-import java.nio.charset.Charset;
+import java.nio.charset.StandardCharsets;
+import java.util.Arrays;
 import java.util.Collections;
 import java.util.HashMap;
+import java.util.List;
 import java.util.Map;
-import java.util.Set;
 
 import org.apache.kafka.common.header.Headers;
 import org.apache.kafka.common.header.internals.RecordHeader;
@@ -31,7 +32,6 @@ import org.apache.kafka.common.header.internals.RecordHeaders;
 import org.junit.Test;
 
 import org.springframework.kafka.support.DefaultKafkaHeaderMapper.NonTrustedHeaderType;
-import org.springframework.kafka.test.utils.KafkaTestUtils;
 import org.springframework.messaging.Message;
 import org.springframework.messaging.MessageHeaders;
 import org.springframework.messaging.support.ExecutorSubscribableChannel;
@@ -42,6 +42,8 @@ import org.springframework.util.MimeTypeUtils;
 
 /**
  * @author Gary Russell
+ * @author Artem Bilan
+ *
  * @since 1.3
  *
  */
@@ -51,7 +53,7 @@ public class DefaultKafkaHeaderMapperTests {
 	public void testTrustedAndNot() {
 		DefaultKafkaHeaderMapper mapper = new DefaultKafkaHeaderMapper();
 		mapper.addToStringClasses(Bar.class.getName());
-		MimeType utf8Text = new MimeType(MimeTypeUtils.TEXT_PLAIN, Charset.forName("UTF-8"));
+		MimeType utf8Text = new MimeType(MimeTypeUtils.TEXT_PLAIN, StandardCharsets.UTF_8);
 		Message<String> message = MessageBuilder.withPayload("foo")
 				.setHeader("foo", "bar".getBytes())
 				.setHeader("baz", "qux")
@@ -60,7 +62,7 @@ public class DefaultKafkaHeaderMapperTests {
 				.setHeader(MessageHeaders.REPLY_CHANNEL, new ExecutorSubscribableChannel())
 				.setHeader(MessageHeaders.ERROR_CHANNEL, "errors")
 				.setHeader(MessageHeaders.CONTENT_TYPE, utf8Text)
-				.setHeader("simpleContentType", MimeTypeUtils.TEXT_PLAIN)
+				.setHeader("simpleContentType", MimeTypeUtils.TEXT_PLAIN_VALUE)
 				.setHeader("customToString", new Bar("fiz"))
 				.build();
 		RecordHeaders recordHeaders = new RecordHeaders();
@@ -73,8 +75,8 @@ public class DefaultKafkaHeaderMapperTests {
 		assertThat(headers.get("baz")).isEqualTo("qux");
 		assertThat(headers.get("fix")).isInstanceOf(NonTrustedHeaderType.class);
 		assertThat(headers.get("linkedMVMap")).isInstanceOf(LinkedMultiValueMap.class);
-		assertThat(headers.get(MessageHeaders.CONTENT_TYPE)).isEqualTo(utf8Text.toString());
-		assertThat(headers.get("simpleContentType")).isEqualTo(MimeTypeUtils.TEXT_PLAIN.toString());
+		assertThat(headers.get(MessageHeaders.CONTENT_TYPE)).isEqualTo(utf8Text);
+		assertThat(headers.get("simpleContentType")).isEqualTo(MimeTypeUtils.TEXT_PLAIN_VALUE);
 		assertThat(headers.get(MessageHeaders.REPLY_CHANNEL)).isNull();
 		assertThat(headers.get(MessageHeaders.ERROR_CHANNEL)).isEqualTo("errors");
 		assertThat(headers.get("customToString")).isEqualTo("Bar [field=fiz]");
@@ -94,7 +96,7 @@ public class DefaultKafkaHeaderMapperTests {
 	}
 
 	@Test
-	public void testReserializedNonTrusted() {
+	public void testDeserializedNonTrusted() {
 		DefaultKafkaHeaderMapper mapper = new DefaultKafkaHeaderMapper();
 		Message<String> message = MessageBuilder.withPayload("foo")
 				.setHeader("fix", new Foo())
@@ -126,27 +128,19 @@ public class DefaultKafkaHeaderMapperTests {
 	}
 
 	@Test
-	public void testMimeBackwardsCompat() {
+	public void testMimeTypeInHeaders() {
 		DefaultKafkaHeaderMapper mapper = new DefaultKafkaHeaderMapper();
 		MessageHeaders headers = new MessageHeaders(
-				Collections.singletonMap("foo", MimeType.valueOf("application/json")));
+				Collections.singletonMap("foo",
+						Arrays.asList(MimeType.valueOf("application/json"), MimeType.valueOf("text/plain"))));
 
 		RecordHeaders recordHeaders = new RecordHeaders();
 		mapper.fromHeaders(headers, recordHeaders);
 		Map<String, Object> receivedHeaders = new HashMap<>();
 		mapper.toHeaders(recordHeaders, receivedHeaders);
 		Object fooHeader = receivedHeaders.get("foo");
-		assertThat(fooHeader).isInstanceOf(String.class);
-		assertThat(fooHeader).isEqualTo("application/json");
-
-		KafkaTestUtils.getPropertyValue(mapper, "toStringClasses", Set.class).clear();
-		recordHeaders = new RecordHeaders();
-		mapper.fromHeaders(headers, recordHeaders);
-		receivedHeaders = new HashMap<>();
-		mapper.toHeaders(recordHeaders, receivedHeaders);
-		fooHeader = receivedHeaders.get("foo");
-		assertThat(fooHeader).isInstanceOf(MimeType.class);
-		assertThat(fooHeader).isEqualTo(MimeType.valueOf("application/json"));
+		assertThat(fooHeader).isInstanceOf(List.class);
+		assertThat(fooHeader).asList().containsExactly("application/json", "text/plain");
 	}
 
 	@Test
